# Job_market_research

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.celery  JsonToCsv.py  README.md  Rekrute.py  backupMongo.py  celery_client.py  clean_minio_data.py  debug_response.txt  demonconv.py  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  dockercompose.dev.yaml  dockerfile  emplois_ma_data_ai_ml_debug.json  filtrage.py  groq.py  initialize_spacy.py  main.py  minio_extract.py  mongo_backup.csv  mongodb_connect.py  new_offers.json  offres_emploi.json  offres_emploi_bayt.json  offres_emploi_rekrute.json  offres_marocannonces.json  one_shot_enriched.json  openrouter.py  pipline.py  processed_jobs.csv  processed_jobs_demon.json  prometheus.yml  pyproject.toml  read_from_minio.py  (+9 more)
.github/workflows/: linting.yaml  upload_to_minio.py
AI models/: initialize_spacy.py  skill_extractor.py
Classsification/: TitleDic.json  pipline.py  prompt.json
Data/: detailed_offers_by_script.json  merged_jobs.json  offres_emploi_bayt.json  offres_emploi_emploi.json  offres_emploi_rekrute.json  processed_final.json  processed_jobs.json  processed_jobs.xlsx
Data_extraction/: Job_schema.json  JsonToCsv.py  MarocAnn.py  Rekrute.py  bayt.py  checked_proxies.txt  emploi.py  emplois_ma_data_ai_ml_debug.json  mongodb_connect.py  offres_emploi_rekrute.json  offres_marocannonces.json  selenium_init.py  test2.py  test_json.py  test_val.json  test_val.py
Data_extraction/Traitement/: JsonToCsv.py  backup.py  filtrage.py  main.py  mongodb_connect.py  pipline.py
Data_extraction/Websites/: Job_schema.json  MarocAnn.py  Rekrute.py  (+4 more)
MongoDb/: mongodb_connect.py
app/: tasks.py  test_celery.py
celery/: celeryd.sh
celery_app/: __init__.py  celeryconfig.py  celeryd.py  tasks.py  web_scrape.py
filtrage/: Merge.py  filtrage.py
gemini process/: corsignal.py  process_gemini.py  sorsignal.json
test/: JsonToCsv.py  aistudio.py  build_mcd.py  groq.py  one_shot_enriched_gemini.json  skilner.py  test.py  test2.py  test3.py  test_crawl4ai.py
(+27 files in other folders)
