[project]
name = "job-analytics"
version = "0.1.0"
description = "A job analytics tool using web scraping and data analysis."
authors = [
  { name = "Souhail Khalmadani", email = "youremail@example.com" }
]
requires-python = ">=3.10"

dependencies = [
  "annotated-types==0.7.0",
  "attrs==25.3.0",
  "blinker>=1.9.0",
  "blis==1.2.0",
  "catalogue==2.0.10",
  "certifi==2025.1.31",
  "cffi==1.17.1",
  "charset-normalizer==3.4.1",
  "click==8.1.8",
  "cloudpathlib==0.21.0",
  "colorama==0.4.6",
  "confection==0.1.5",
  "cymem==2.0.11",
  "dnspython==2.7.0",
  "dotenv==0.9.9",
  "h11==0.14.0",
  "idna==3.10",
  "Jinja2==3.1.6",
  "json-schema>=0.3",
  "jsonschema==4.23.0",
  "jsonschema-specifications==2024.10.1",
  "langcodes==3.5.0",
  "language_data==1.3.0",
  "marisa-trie==1.2.1",
  "markdown-it-py==3.0.0",
  "MarkupSafe==3.0.2",
  "mdurl==0.1.2",
  "murmurhash==1.0.12",
  "numpy==2.2.4",
  "outcome==1.3.0.post0",
  "packaging==24.2",
  "pre-commit>=4.2.0",
  "preshed==3.0.9",
  "pyautogui>=0.9.54",
  "pycparser==2.22",
  "pydantic==2.10.6",
  "pydantic_core==2.27.2",
  "Pygments==2.19.1",
  "pylint>=3.3.7",
  "pymongo==4.11.3",
  "PySocks==1.7.1",
  "python-dotenv==1.1.0",
  "referencing==0.36.2",
  "requests==2.32.3",
  "rich==13.9.4",
  "rpds-py==0.24.0",
  "selenium==4.30.0",
  "selenium-wire>=5.1.0",
  "seleniumbase>=4.36.4",
  "shellingham==1.5.4",
  "smart-open==7.1.0",
  "sniffio==1.3.1",
  "sortedcontainers==2.4.0",
  "spacy==3.8.4",
  "spacy-legacy==3.0.12",
  "spacy-loggers==1.0.5",
  "srsly==2.5.1",
  "thinc==8.3.4",
  "tqdm==4.67.1",
  "trio==0.29.0",
  "trio-websocket==0.12.2",
  "typer==0.15.2",
  "typing_extensions==4.13.0",
  "undetected-chromedriver>=3.5.5",
  "urllib3==2.3.0",
  "uv==0.6.16",
  "virtualenv>=20.31.1",
  "wasabi==1.1.3",
  "weasel==0.4.1",
  "websocket-client==1.8.0",
  "wrapt==1.17.2",
  "wsproto==1.2.0",
]

[tool.uv]
# This section can hold optional config for uv
# Add any uv-specific options here if needed.
